Revert "cleanup: scrub what-not-why and migration-history comments"
This reverts commit a48a0d3b6b798d80a88c9d0b2e57aa18e7cac013.